<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/darkBackground">

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_username"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/lightText"
        android:labelFor="@id/username"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/placeholder_user"
        android:inputType="text"
        android:textColor="@color/lightText"
        android:textColorHint="@color/darkHint"
        android:padding="12dp"
        android:textSize="30sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_pass"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/lightText"
        android:labelFor="@id/password"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/placeholder_pass"
        android:inputType="textPassword"
        android:textColor="@color/lightText"
        android:textColorHint="@color/darkHint"
        android:padding="12dp"
        android:textSize="30sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primaryButton"
        android:padding="12dp"
        android:textSize="30sp"
        android:text="@string/btn_login"
        android:textColor="@color/lightText" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="32sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />
</LinearLayout>
