<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/darkBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_text"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/lightText"
        android:labelFor="@id/username"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/default_input_text"
        android:inputType="text"
        android:textSize="32sp"
        android:textColor="@color/lightText"
        android:textColorHint="@color/darkHint"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_button_text"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primaryButton"
        android:padding="12dp"
        android:textSize="22sp"
        android:textColor="@color/lightText"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="32sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>
</LinearLayout>
